fixing the extra margin in the email input

--- a/app/app.css
+++ b/app/app.css
@@ -81,12 +81,8 @@ a, a:focus, a:hover {
   margin-left: 5px;
 }
 
-.form-group > .col-sm-8 {
+.form-group > .col-sm-8.col-sm-offset-4 {
   margin-top: 10px;
-}
-
-.form-group > .col-sm-8:first-of-type {
-  margin-top: 0;
 }
 
 form .col-sm-3 {
